[package]
name = "csv-analyzer-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.2"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "console",
]}
js-sys = "0.3"
regex = "1.10.2"
lazy_static = "1.4.0"